Fixed issue of extra margins in create image modal (bsc#1086354)
The create image modal -> metadata sub headings have some extra margins
which is caused by the login page logo styling overwritten.

--- a/themes/suse/_styles.scss
+++ b/themes/suse/_styles.scss
@@ -62,7 +62,7 @@ body {
 #splash {
   background-color: $blue-darker;
 }
-#splash .panel, .panel-default > .panel-heading, .panel-footer {
+#splash .panel, .panel-default > .logo-panel-heading, .panel-footer {
   background-color: $blue-darker;
   color: #ffffff;
   border: 0;
